--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div class="banner">
+<!--             <div class="banner">
                 <div class="split-left">
                     <div class="center">
                         <h3>Education</h3>
@@ -85,7 +85,7 @@
                 <div class="split-right split-img">
                     <img class="center" id="projectsImg">
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </body>
