--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <b>Connect with me:</b><br>
                         <a class="icon-link" href="https://www.facebook.com/mario.lim.752"><img class="contact-icon" src="assets/facebook.png"></a>
                         <a class="icon-link" href="https://github.com/JavascriptAddict"><img class="contact-icon" src="assets/github.png"></a>
-                        <a class="icon-link" href="https://www.linkedin.com/in/mario-lim-ba9a201a2/"><img class="contact-icon" src="assets/linkedin-icon-png--1600.png"></a>
+                        <a class="icon-link" href="https://www.linkedin.com/in/mario-lim-it/"><img class="contact-icon" src="assets/linkedin-icon-png--1600.png"></a>
 
                      </span>
                     </div>
