--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                     <div class="center">
                     <h3>Intro</h3>
                     <p id="introDesc"></p>
+                    <br>
+                    <a class="button resumeBtn" href="assets/resume.pdf">Resume -></a>
                     <span>
                         <b>Connect with me:</b><br>
                         <a class="icon-link" href="https://www.facebook.com/mario.lim.752"><img class="contact-icon" src="assets/facebook.png"></a>
